--- a/src/main/resources/com/example/taskmanagementapplicationjava/hello-view.fxml
+++ b/src/main/resources/com/example/taskmanagementapplicationjava/hello-view.fxml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.taskmanagementapplicationjava.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taskmanagementapplicationjava.RegistrationController">
+   <children>
+      <TextField fx:id="fnameTf" layoutX="121.0" layoutY="162.0" prefHeight="25.0" prefWidth="213.0" />
+      <TextField fx:id="lnameTf" layoutX="121.0" layoutY="219.0" prefHeight="25.0" prefWidth="213.0" />
+      <TextField fx:id="unameTf" layoutX="121.0" layoutY="279.0" prefHeight="25.0" prefWidth="213.0" />
+      <TextField fx:id="passwordTf" layoutX="121.0" layoutY="335.0" prefHeight="25.0" prefWidth="213.0" />
+      <Label layoutX="121.0" layoutY="144.0" prefHeight="17.0" prefWidth="69.0" text="First Name" />
+      <Label layoutX="121.0" layoutY="201.0" prefHeight="17.0" prefWidth="69.0" text="Last Name" />
+      <Label layoutX="121.0" layoutY="261.0" prefHeight="17.0" prefWidth="69.0" text="Username" />
+      <Label layoutX="121.0" layoutY="317.0" prefHeight="17.0" prefWidth="69.0" text="Password" />
+      <TextField fx:id="cpasswordTf" layoutX="121.0" layoutY="394.0" prefHeight="25.0" prefWidth="213.0" />
+      <Label layoutX="121.0" layoutY="376.0" prefHeight="17.0" prefWidth="108.0" text="Confirm Password" />
+      <Label layoutX="122.0" layoutY="78.0" text="CREATE ACCOUNT">
+         <font>
+            <Font name="Eras Bold ITC" size="22.0" />
+         </font>
+      </Label>
+      <Button fx:id="createAccountBtn" layoutX="173.0" layoutY="461.0" mnemonicParsing="false" onAction="#register" prefHeight="25.0" prefWidth="108.0" text="Create" />
+   </children>
+</Pane>
